[package]
name = "intray"
version = "0.2.0"
authors = ["Hung-I Wang <whygowe@gmail.com>"]
edition = "2018"

[dependencies]
tide = { git = "https://github.com/rustasync/tide.git" }
serde = "1.0"
serde_json = "1.0"
rust-embed = "5.1"
mime_guess = "2.0.1"
tokio = "0.1"
futures-preview = {version = "0.3.0-alpha.18", features = ["compat", "io-compat"]}
#chrono = "0.4"
uuid = { version = "0.7", features = ["v4", "serde"] }
bytes = "0.4"
env_logger = "0.6"
log = "0.4"
structopt = "0.2"
lazy_static = "1"
failure = "0.1"

[patch.crates-io]
http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-hyper = { git = "https://github.com/rustasync/http-service", branch = "master" }
#http-service-mock = { git = "https://github.com/rustasync/http-service", branch = "master" }
